Alignment fix: Float everything left.

--- a/squadFindr.css
+++ b/squadFindr.css
@@ -14,9 +14,11 @@ h1 {
 	border-radius: 5% 0% 0% 5%;
 }
 #profileViewer {
+	float: left;
 	
 }
 #playerInfo {
+	float: left;
 	width: 400px;
 	border: 5px ridge blue;
 }
